--- a/main.html
+++ b/main.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flexbox Row with Wrapping</title>
+  <style>
+    .holder {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      width: 100%;
+      margin: 0;
+    }
+
+    .item {
+      width: 50px;
+      height: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      /* border: 1px solid black; */
+      font-size: 16px;
+      font-weight: bold;
+    }
+    .item:nth-child(1) {
+      background-color: green;
+    }
+
+    .item:nth-child(2) {
+      background-color: red;
+    }
+
+    .item:nth-child(3) {
+      background-color: blue;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <div class="holder">
+    <div class="item">3</div>
+    <div class="item">1</div>
+    <div class="item">2</div>
+  </div>
 </body>
-
 </html>
